Changed html for home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,4 +15,8 @@
     <a href="{% url 'research' %}">  Read more... </a>
 </p>
 
+<p>Misc:
+        <a href="{% url 'misc' %}">  Read more... </a>
+    </p>
+
 {% endblock content %}
