Changed forms to accept markdown

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,13 +14,54 @@
     and politics. His <a class="research_link" href="{% url 'research' %}">  research</a> focuses on
     violence, collective action, and race. Click to view his 
     <a class="cv_link" href="https://www.dropbox.com/s/hi82qfzz3k6p1o3/Holland_CV_060519.pdf?dl=0"> 
-    cv</a> and contact him at holland [dot] 
-    415 [at] osu [dot] edu.
-</p>
-<p>
-    <img src ="{% static 'images/me_animate_060519a.gif' %}" alt = "title" class ="align-center" />
+    cv</a>. You can contact him at holland [dot] 415 [at] osu [dot] edu.
 </p>
 </div>
+<!-- 
+<div class = "row centered">
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060519b_t3.png' %}" alt = "title1" class ="letter1" />
+        </div>  
+    <div class="imgContainer">
+        <img src ="{% static 'images/me_animate_060519b.gif' %}" alt = "title" class ="me_gif" />
+    </div>
+    <div class="imgContainer">
+    <img src ="{% static 'images/word_060519b_t3.png' %}" alt = "title1" class ="letter1" />
+    </div>
+</div> -->
+
+
+<div class = "row centered">
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter4" />
+        </div> 
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter3" />
+        </div> 
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter2" />
+        </div> 
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter1" />
+        </div>  
+    <div class="imgContainer">
+        <img src ="{% static 'images/me_animate_060519b.gif' %}" alt = "title" class ="me_gif" />
+    </div>
+    <div class="imgContainer">
+    <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter1" />
+    </div>
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter2" />
+        </div> 
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter3" />
+        </div> 
+    <div class="imgContainer">
+            <img src ="{% static 'images/word_060619_t2_trans.png' %}" alt = "title1" class ="letter4" />
+        </div> 
+</div>
+
+
 
 
 
