--- a/templates/course_post_edit.html
+++ b/templates/course_post_edit.html
@@ -2,8 +2,8 @@
 
 {% block content %}
     <h1>Edit</h1>
-    <!-- <form action="" method="post">{% csrf_token %}
-      {{ form }}
-    <button class="btn btn-info ml-2" type="submit">Update</button>
-</form> -->
+    <form action="" method="post">{% csrf_token %}
+      {{ form.as_p }}
+    <input type="submit" value="Save" />
+</form>
 {% endblock content %}
