--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,14 @@
     from the Government Department at Harvard University and a BA in 
     Political Science and East Asian Studies from the University of Wisconsin.</p>
 <p> 
-    He works as an Assistant Professor at the University of Hawaii at Hilo, teaching <a class="courses_link" href="{% url 'courses' %}"> courses</a> on crime, justice,
-    and politics. His <a class="research_link" href="{% url 'research' %}">  research</a> focuses on
+    He works as an Assistant Professor at the University of Hawaii at Hilo, teaching <a class="courses_link" href="#teaching"> courses</a> on crime, justice,
+    and politics. His <a class="research_link" href="#research">  research</a> focuses on
     violence, collective action, and race. Click to view his 
     <a class="cv_link" href="https://www.dropbox.com/s/hi82qfzz3k6p1o3/Holland_CV_060519.pdf?dl=0"> 
     cv</a>. You can contact him at holland [dot] 415 [at] osu [dot] edu.
 </p>
 </div>
+
 <!-- 
 <div class = "row centered">
     <div class="imgContainer">
@@ -61,8 +62,9 @@
         </div> 
 </div>
 
+<div id ="teaching">{% lorem 3 p %}</div>
 
-
+<div id ="research">{% lorem 3 p %}</div>
 
 
 {% endblock content %}
