--- a/templates/course_post_delete.html
+++ b/templates/course_post_delete.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Delete? Are you sure?</h1>
-    <!-- <form action="" method="post">{% csrf_token %}
-      <p>Are you sure you want to delete "{{ post.title }}"?</p>
-      <button class="btn btn-danger ml-2" type="submit">Confirm</button> -->
-    <!-- </form> -->
-{% endblock content %}
+<h1>Delete post</h1>
+  <form action="" method="post">{% csrf_token %}
+  <p>Are you sure you want to delete "{{ object.title }}"?</p>
+  <input type="submit" value="Confirm" /> </form>
+{% endblock %}
