--- a/templates/course_post_new.html
+++ b/templates/course_post_new.html
@@ -4,8 +4,8 @@
 {% block content %}
     <h1>New Post</h1>
     <form method="POST" action="">{% csrf_token %}
-        {{ form }}
-    <button class="btn btn-success ml-2" type="submit">Save</button>
+        {{ form.as_p }}
+    <input type="submit" value="Save" />
     </form>
     
     {{ form.media }}
