--- a/templates/course_post_new.html
+++ b/templates/course_post_new.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <h1>New Post</h1>
+    <h1>Write a Post</h1>
     <form method="POST" action="">{% csrf_token %}
         {{ form.as_p }}
     <input type="submit" value="Save" />
