--- a/templates/aj101_fall2019.html
+++ b/templates/aj101_fall2019.html
@@ -6,11 +6,16 @@
 {% block content %}
 <h1>AJ 101: Introduction to Administration of Justice</h1>
 
-<p> 
+{% if user.is_authenticated and user.course == "AJ101 Fall 2019"%}
+<p> Hi {{ user.name }}! </p>
+<p>
   <a href="{% url 'aj101_fall2019_post_new' %}">Write a post</a> |
-  <a href="{% url 'login' %}"> Login </a> |
-  <a href="{% url 'logout' %}"> Logout </a>
-</p>
+  <a href="{% url 'account_logout' %}">Log Out</a></p>
+{% else %}
+  <p>
+  <a href="{% url 'account_login' %}">Log In</a> 
+  | <a href="{% url 'account_signup' %}">Sign Up</a> </p>
+{% endif %}
 
 <div id = module0>
 
