--- a/templates/ps324_fall2019.html
+++ b/templates/ps324_fall2019.html
@@ -32,7 +32,7 @@
 
 {% for post in view.intro_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}
 
@@ -44,7 +44,7 @@
 
 {% for post in view.mod1_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module1 -->
@@ -55,7 +55,7 @@
 
 {% for post in view.mod2_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module2 -->
@@ -66,7 +66,7 @@
 
 {% for post in view.mod3_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module3 -->
@@ -77,7 +77,7 @@
 
 {% for post in view.mod4_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module4 -->
@@ -88,7 +88,7 @@
 
 {% for post in view.mod5_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module5 -->
@@ -99,7 +99,7 @@
 
 {% for post in view.mod6_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module6 -->
@@ -110,7 +110,7 @@
 
 {% for post in view.mod7_posts %}
   <ul>
-    <li>{{ post.author }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
+    <li>{{ post.coauthors }} on <a href="{% url 'ps324_fall2019_post_detail' post.pk %}"> {{ post.title }}</a> </li>
   </ul>
 {% endfor %}  
 </div><!-- end of module7 -->
